Fixed root dir pointer.

--- a/R/figures/FIGURE_5_BCDE_Target_ATC.Rmd
+++ b/R/figures/FIGURE_5_BCDE_Target_ATC.Rmd
@@ -9,7 +9,7 @@ output:
 ---
 
 ```{r setup, echo=FALSE}
-knitr::opts_knit$set(root.dir = '../../../')
+knitr::opts_knit$set(root.dir = '../../')
 ```
 
 ```{r setup2, echo=FALSE, message=FALSE, warning=FALSE}
